# platform.core.pim.libaccounts-svc

./: AUTHORS  CMakeLists.txt  NOTICE  accounts-svc.pc.in  libaccounts-svc.manifest
TC/: config  execute.sh
TC/testcase/: Makefile  tslist  utc_account  utc_account.c
debian/: changelog  control  libaccounts-svc-0.postinst  rules
include/: account-error.h  account-private.h  account-types.h  account.h  account_PG.h
packaging/: accounts_DB.sh  libaccounts-svc.changes  libaccounts-svc.spec
src/: account-capability-parser.c  account-xml-verify.c  account.c  utc-account.c
